--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -490,7 +490,8 @@
 }
 #img_url{
   width: 100%;
-  height: auto;
+  height: 200px;
+  padding: 5%;
 }
 .floatright{
   float: right;
@@ -499,14 +500,17 @@
   text-align: center;
   color: black;
 }
-.floatleft{
-  float: left;
+.linktoshare{
   text-transform: uppercase;
   font-size: 15px;
   letter-spacing: 2px;
 }
+.detele_img{
+  padding: 5px;
+}
 .img_quit{
-  margin-top: -5px;
+  margin-left: 5%;
+  margin-top: -2px;
 }
 #p_url{
   margin-top: -1px;
