--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -1,115 +1,73 @@
- @import url('https://fonts.googleapis.com/css?family=Barlow&display=swap');
- body{
-  color: #000;
-  background-color: #fafafa;
-  font-family: 'Barlow', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
+
+body{
+	overflow-x: hidden;
+  font-family: 'Open Sans', sans-serif;
+}
+footer{
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+	margin: 0 auto;
+}
+.content-footer{
+  margin-top: 2%;
+  position: relative;
+}
+.navbar{
+  background-color: #007fe9;
+  font-weight: 400;
 }
 .navbar-brand{
-  float: left;
-  margin-top: 10px;
+  font-weight: 600;
 }
-.header{
-  height: 200px;
-  width: 100%;
-  background-color: red;
-}
-.bt_login{
-  padding-left: 25px;
-  padding-right: 25px;
-}
-.page-header {
-  position: relative;
+.left-div{
+  background-image:url(http://davidespier.com/newyorkcity.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+	height: 100vh;
 }
-.page-caption {
-  padding-top: 75px;
-  padding-bottom: 75px;
+.right-div{
+	height: 100vh;
 }
-.page-upload{
-  font-size: 72px;
-  line-height: 1;
-  color: #444 !important;
-  font-weight: 200;
-  text-align: center;
-  letter-spacing: 50px;
+.left-vertical-div{
+	text-align: center;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
-#my_library{
-  margin-top: 3%;
+.title-div{
+	color: #ffffff;
+	font-size: 91px;
+	font-weight: 600;
 }
-.library{
-  float: left;
-  text-align: left;
-  font-size: 21px;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-}
-#index{
-  margin-top: 10%;
-}
-.text-upload{
-  font-size: 20px;
-  line-height: 1;
-  color: #444 !important;
-  text-align: center;
-  letter-spacing: 5px;
-}
-.card-section {
-  position: relative;
-  bottom: 60px;
-}
-.card-block {
-  padding: 80px;
-  border-radius: 5px;
-}
-.section-title {
-  margin-bottom: 60px;
-}
-.show_img{
-  margin-top: 5%;
-}
-.title_library{
-  margin-top: 1%;
-  color: black;
-  text-transform: uppercase;
-  font-size: 21px;
-  letter-spacing: 5px;
-  float: left;
-}
-.page_img--account{
-  text-align: center;
-  font-size: 21px;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-}
-.text-page{
-  color: white !important;
-  text-align: center;
-  letter-spacing: 5px;
-  font-weight: 400;
-  font-size: 21px;
+.text-div{
+	color: #ffffff;
+	font-size: 23px;	
 }
 
-.logo_login{
-  margin-bottom: 15%;
-  text-align: center !important;
+.title-div-login{
+	font-size: 35px;
+	font-weight: 600;
 }
-.social_media{
-  text-align: center;
-  padding-top: 25px;
-}
-.or_social_media{
-  padding: 5px;
-  font-size: 21px;
-  color: #DD4B39;
-}
-.register-body{
-  padding-top: 90px;
+.form-right{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: left;
 }
 .loginBtn {
   box-sizing: border-box;
   position: relative;
   margin: 0.2em;
-  padding: 0 15px 0 46px;
+  width: 100%;
+  padding: 0 15px 0 50px;
   border: none;
   text-align: left;
   line-height: 34px;
@@ -117,8 +75,6 @@
   border-radius: 0.2em;
   font-size: 16px;
   color: #FFF;
-  width: 75%;
-  text-align: center;
   margin-top: 2%;
 }
 .loginBtn:before {
@@ -156,7 +112,7 @@
   background: url('../../core/img/icon_google.png') 6px 6px no-repeat;
 }
 .loginBtn--google:hover,.loginBtn--google:focus {
-  background: #ab4032;
+  background: #ff7261;
 }
 
 .loginBtn--github {
@@ -192,359 +148,98 @@
 .loginBtn--yahoo:hover,.loginBtn--yahoo:focus {
   background: #4e01aa;
 }
-.menuBtn {
-  box-sizing: border-box;
-  position: relative;
-  margin: 0.2em;
-  padding: 0 15px 0 46px;
-  border: none;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #FFF;
-  border: 2px solid #4C69BA;
-  text-align: center;
-  float: right;
+.content{
+  height: 100vh;
 }
-.menuBtn:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
+.img-content{
+  text-align: center;
+  background-color: white;
+  margin-top: 5%;
+}
+.library-name{
+  text-transform: uppercase;
+  margin-top: 2%;
+  font-size: 25px;
+  font-weight: 600;
+}
+#user_name_info{
+  color: white;
+  font-weight: 600;
+}
+
+.overlay {
+  position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
-  width: 34px;
-  height: 100%;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
 }
-.menuBtn:focus {
-  outline: none;
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
 }
-.menuBtn--menu {
-  background-color: #4C69BA;
-}
-.menuBtn--menu:before {
-  background: url('../../core/img/avatar.png') 6px 6px no-repeat;
-}
-.menuBtn--menu:hover,.menuBtn--menu:focus {
-  background: #375bbf;
-  border: 2px solid #375bbf;
-}
-.registerBtn {
-  box-sizing: border-box;
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 80%;
   position: relative;
-  margin: 0.2em;
-  padding: 0 35px 0 35px;
-  border: 1px solid #4C69BA;
-  text-align: left;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #4C69BA;
-  text-align: center;
+  transition: all 5s ease-in-out;
+  height: auto;close
 }
-.registerBtn--menu {
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #000;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+#buttonUpload{
+  padding: 20px 50px;
+  color: #ffffff;
+  margin-top: 2%;
+  border: none;
+  background-color: #007fe9;
+}
+.upload-file{
+  font-size: 25px;
+  font-weight: 600;
+}
+.custom-file-upload{
+  padding: 20px 50px;
+  color: black;
+  border: solid 2px black;
   background-color: white;
 }
-.registerBtn--menu:hover,.registerBtn--registerBtn:focus {
-  background: #fafafa;
-  border: 1px solid #375bbf;
+input[type="file"] {
+    display: none;
 }
-.uploadBtn {
-  box-sizing: border-box;
-  position: relative;
-  padding: 0 65px 0 65px;
-  border: none;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #4C69BA;
-  border: 1px solid #4C69BA;
-  text-align: center;
-  font-weight: bold;
-  float: right;
+@media only screen and (max-width: 414px) {
+.title-div{
+  color: #ffffff;
+  font-size: 41px;
+  font-weight: 600;
 }
-.uploadBtn:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 34px;
-  height: 100%;
-}
-.uploadBtn:focus {
-  outline: none;
-}
-.uploadBtn--upload {
-  
-  background-color: #ffffff;
-}
-.uploadBtn--upload:before {
-  background: url('../../core/img/upload.png') 6px 6px no-repeat;
-}
-.uploadBtn--upload:hover,.uploadBtn--upload:focus {
-  color: #4C69BA;
-  border: 1px solid #4C69BA;
-}
-.uploadBtn2 {
-  box-sizing: border-box;
-  position: relative;
-  padding: 0 65px 0 65px;
-  border: none;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #4C69BA;
-  border: 1px solid #4C69BA;
-  text-align: center;
-  font-weight: bold;
-}
-.uploadBtn2:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 34px;
-  height: 100%;
-}
-.uploadBtn2:focus {
-  outline: none;
-}
-.uploadBtn2--upload2 {
-  
-  background-color: #ffffff;
-}
-.uploadBtn2--upload2:before {
-  background: url('../../core/img/upload.png') 6px 6px no-repeat;
-}
-.uploadBtn2--upload2:hover,.uploadBtn--upload:focus {
-  color: #4C69BA;
-  border: 1px solid #4C69BA;
-}
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-  
-}
-.modal-content {
-  text-align: center;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 35%;
+.text-div{
+  color: #ffffff;
+  font-size: 18px;  
 }
 
-.close1 {
-  color: #000;
-  font-size: 28px;
-  font-weight: bold;
-}
-.close1:hover,.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.close2{
-  color: #000;
-  font-size: 28px;
-  font-weight: bold;
-}
-.close2:hover,.close2:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.close3{
-  color: #000;
-  font-size: 28px;
-  font-weight: bold;
-}
-.close3:hover,.close2:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.name_correct{
-  padding-right: 51px;
-}
-#btnLogout{
-  margin-left: 25px;
-}
-.user_name{
-  float: right;
-  margin-top: 8px;
-}
-.btnLogout {
-  float: right;
-  box-sizing: border-box;
-  position: relative;
-  margin: 0.2em;
-  margin-top: 20px;
-  padding: 0 15px 0 46px;
-  border: none;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #FFF;
-  text-align: center;
-}
-.btnLogout:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 34px;
-  height: 100%;
-}
-.btnLogout:focus {
-  outline: none;
-}
-.btnLogout--menu {
-  background-color: #4C69BA;
-  
-  text-shadow: 0 -1px 0 #354C8C;
-}
-.btnLogout--menu:before {
-  background: url('../../core/img/logout.png') 6px 6px no-repeat;
-}
-.btnLogout--menu:hover,.loginBtn--facebook:focus {
-  background-color: #375bbf;
-}
-.resetBtn {
-  box-sizing: border-box;
-  position: relative;
-  padding: 0 15px 0 15px;
-  border: none;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #FFF;
-  text-align: center;
-}
-
-.resetBtn:focus {
-  outline: none;
-}
-.resetBtn--reset {
-  background-color: #4C69BA;
-}
-.resetBtn--reset:hover,.resetBtn--reset:focus {
-  background-color: #375bbf;
-}
-#myProgress {
-  width: 100%;
-  background-color: grey;
-}
-#myBar {
-  width: 1%;
-  height: 30px;
-  background-color: green;
-}
-.preview_zone {
-  height: auto;
-  border-width: 2px;
-  margin-bottom: 20px;
-}
-.preview_zone {
-  color: #ccc;
-  border-style: dashed;
-  border-color: #ccc;
-  line-height: 200px;
-  text-align: center
-}
-.upload-drop-zone.drop {
-  color: #222;
-  border-color: #222;
-}
-.name_correct{
-  color: black;
-}
-.image_name{
-  font-weight: bold;
-}
-#margintop25{
-  margin-top: 5%;
-}
-.registerBtn .menuBtn .hiddenPrivateInfo{
-  margin-top: 5%;
-}
-.downlaod_url{
-  height: 100%;
-}
-#img_url{
-  width: 100%;
-  height: auto;
-  padding: 5%;
-}
-.floatright{
-  float: right;
-}
-.fileContainer{
-  text-align: center;
-  color: black;
-}
-.linktoshare{
-  text-transform: uppercase;
-  font-size: 15px;
-  letter-spacing: 2px;
-}
-.detele_img{
-  padding: 5px;
-}
-.img_quit{
-  margin-left: 5%;
-  margin-top: -2px;
-}
-#p_url{
-  margin-top: -1px;
-}
-footer{
-  margin-top: 2%;
-  width: 100%;
-  text-align: center;
-}
-
-@media screen and (max-width:1366px){
-  .navbarimg{
-    text-align: center !important;
-  }
-  .uploadBtn{
-    margin-top: 2%;
-  }
-  .modal-content{
-    width: 100%;
-    height: auto;
-  }
-  .uploadBtn--upload2{
-    text-align: center;
-  }
-  .page-upload{
-    margin-top: 15%;
-    letter-spacing: 10px;
-    font-size: 40px;
-  }
-  .text-upload{
-    margin-top: 15%;
-    letter-spacing: 2px;
-  }
-  .title_library{
-      margin-top: 2%;
-  }
 }
