--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -23,12 +23,11 @@ footer{
   font-weight: 600;
 }
 .left-div{
-  background-image:url(http://davidespier.com/newyorkcity.jpg);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-	height: 100vh;
+  width: 100%;
+  height: 100vh;
+  background: url(../img/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 .right-div{
 	height: 100vh;
