--- a/core/css/index.css
+++ b/core/css/index.css
@@ -10,6 +10,7 @@ footer{
 	position: absolute;
 	bottom: 0;
 	margin: 0 auto;
+  color: white;
 }
 .content-footer{
   margin-top: 2%;
@@ -23,46 +24,44 @@ footer{
 .navbar-brand{
   font-weight: 600;
 }
-.left-div{
-  width: 100%;
+.global-div{
+  text-align: center;
   height: 100vh;
-  background: url(../img/bg.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-.right-div{
-	height: 100vh;
+  background-color: #34354a;
 }
 
 .left-vertical-div{
 	text-align: center;
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  margin-top: 2%;
+
 }
 
-.title-div{
+.title{
+  padding-top: 2%;
 	color: #ffffff;
-	font-size: 91px;
+	font-size: 75px;
 	font-weight: 600;
 }
-.text-div{
+.text{
 	color: #ffffff;
-	font-size: 23px;	
+	font-size: 21px;
+  padding: 25px;
 }
 .title-div-login{
 	font-size: 35px;
 	font-weight: 600;
 }
 
-.form-right{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: left;
+.form{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 350px;
+  padding: 50px;
+  background-color: white;
+
 }
 
 .loginBtn {
