--- a/core/css/myfiles.css
+++ b/core/css/myfiles.css
@@ -40,7 +40,8 @@ body{
   background-color: transparent;
   color: white;
   display: block;
-  padding: 35px;
+  padding : 35px;
+  text-align: left;
   text-decoration: none;
 }
 
@@ -143,4 +144,73 @@ body{
 .video{
   width: 100%;
   height: 100%;
+}
+.square-control{
+  text-align: center;
+  margin: 2%;
+  width: 100%;
+  height: 100%;
+  background-color: #494c79;
+}
+.number-control{
+  color: white;
+  font-size: 150px;
+}
+.text-control{
+  color: white;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 1400px) {
+body{
+  margin: 0 auto;
+  overflow-x: hidden;
+  font-family: 'Open Sans', sans-serif;
+}
+.vertical-menu {
+  width: 100%;
+  background-color: #34354a;
+  height: 100%;
+}
+.vertical-menu a {
+  background-color: transparent;
+  color: white;
+  text-align: left;
+  text-decoration: none;
+}
+.content{
+  text-align: center;
+  color: black;
+  background-color: white;
+  width: 100vh;
+
+}
+.line-content{
+  padding-top: 5%;
+  height: 100%;
+  background-color: #494c79;
+  color: white;
+}
+
+body{
+    overflow-y: scroll;
+}
+.square-control{
+  margin-top: 2%;
+  margin-bottom: 2%;
+  text-align: center;
+  height: 100%;
+  color: #494c79;
+  background-color: white;
+}
+.number-control{
+  color: #494c79;
+}
+.text-control{
+  color: #494c79;
+}
+.img-ico-menu{
+  display: none;
+}
 }
