--- a/core/css/index.css
+++ b/core/css/index.css
@@ -39,12 +39,12 @@ footer{
 .title{
   padding-top: 2%;
 	color: #ffffff;
-	font-size: 75px;
+	font-size: 65px;
 	font-weight: 600;
 }
 .text{
 	color: #ffffff;
-	font-size: 21px;
+	font-size: 15px;
   padding: 25px;
 }
 .title-div-login{
@@ -151,4 +151,18 @@ footer{
   background: #4e01aa;
 } 
 
+@media only screen and (max-width: 1660px) {
+
+.form{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  padding: 20px;
+  background-color: transparent;
+}
+.title-div-login{
+  color: white;
+}
 }
