--- a/core/css/myfiles.css
+++ b/core/css/myfiles.css
@@ -162,7 +162,7 @@ body{
   font-weight: bold;
 }
 
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1920px) {
 body{
   margin: 0 auto;
   overflow-x: hidden;
@@ -187,7 +187,7 @@ body{
 
 }
 .line-content{
-  padding-top: 3%;
+  padding-top: 1%;
   height: 100%;
   background-color: #494c79;
   color: white;
@@ -196,12 +196,17 @@ body{
 body{
     overflow-y: scroll;
 }
+
+.img-ico-menu{
+  display: none;
+}
+}
+@media only screen and (max-width: 1024px) {
 .square-control{
-  margin-top: 2%;
-  margin-bottom: 2%;
   text-align: center;
+  margin: 2%;
+  width: 100%;
   height: 100%;
-  color: #494c79;
   background-color: white;
 }
 .number-control{
@@ -210,7 +215,10 @@ body{
 .text-control{
   color: #494c79;
 }
-.img-ico-menu{
-  display: none;
+
+.upload-btn-wrapper input[type=file] {
+  font-size: 100px;
+  text-align: center;
 }
+
 }
