--- a/core/css/index.css
+++ b/core/css/index.css
@@ -27,6 +27,10 @@ footer{
 .global-div{
   text-align: center;
   height: 100vh;
+  background-image: url("../img/skyline.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
   background-color: #34354a;
 }
 
